feat : contents 입력값 검증할때 isBlank()로 하도록 변경